--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="index.html" class="logo">Lina's<span>Touch</span></a>
         <nav class="desktop-nav">
           <ul>
-            <li><a href="#home" class="nav-link">Home</a></li>
+            <li><a href="/" class="nav-link">Home</a></li>
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#services" class="nav-link">Services</a></li>
             <li><a href="#studio" class="nav-link">Studio</a></li>
@@ -56,7 +56,7 @@
 
       <div class="mobile-menu" id="mobile-nav">
         <ul>
-          <li><a href="#home" class="nav-link">Home</a></li>
+          <li><a href="/" class="nav-link">Home</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#services" class="nav-link">Services</a></li>
           <li><a href="#studio" class="nav-link">Studio</a></li>
@@ -76,7 +76,7 @@
         <p class="animate-fade-in">More than nails—it’s a touch of passion, perfected for over 25 years.</p>
         <div class="hero-buttons animate-scale-in">
           <button class="btn primary-btn">Book via WhatsApp</button>
-          <button class="btn outline-btn">View Services</button>
+          <a href="services.html" class="btn outline-btn">View Services</a>
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
       </div>
 
       <div class="view-all">
-        <button class="btn gradient-btn">View All Services</button>
+      <a href="services.html" class="btn gradient-btn">View All Services</a>
       </div>
     </div>
   </section>
