--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <div class="gallery-grid">
         <div class="gallery-item" data-title="Geometric Design" data-category="Abstract">
           <img
-            src="https://images.unsplash.com/photo-1694087590019-0e051d77e27e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            src="assets/img/image01.jpg"
             alt="Geometric Design">
           <div class="gallery-overlay">
             <h3>Geometric Design</h3>
