--- a/index.html
+++ b/index.html
@@ -327,60 +327,90 @@
         <div class="gallery-item" data-title="Geometric Design" data-category="Abstract">
           <img
             src="assets/img/image01.jpg"
-            alt="Geometric Design">
+            alt="Glossy Nail Elegance">
           <div class="gallery-overlay">
-            <h3>Geometric Design</h3>
-            <p>Abstract</p>
+            <h3>Nail Elegance</h3>
+            <p>Glossy</p>
           </div>
         </div>
 
         <div class="gallery-item" data-title="French Manicure" data-category="Classic">
           <img
-            src="https://images.unsplash.com/photo-1667207229735-266c430cca15?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="French Manicure">
+            src="assets/img/image02.jpg"
+            alt="Blue ombré nail design fading from light to dark tones with glossy finish">
           <div class="gallery-overlay">
-            <h3>French Manicure</h3>
-            <p>Classic</p>
+            <h3>Color Cascade</h3>
+            <p>Gradient</p>
           </div>
         </div>
 
         <div class="gallery-item" data-title="Floral Artwork" data-category="Artistic">
           <img
-            src="https://images.unsplash.com/photo-1617159334298-12ec5bef89a7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Floral Artwork">
+            src="assets/img/image03.jpg"
+            alt="Hand with manicured nails in a gradient of nude and brown shades, resting on textured fabric and wood">
           <div class="gallery-overlay">
-            <h3>Floral Artwork</h3>
-            <p>Artistic</p>
+            <h3>Earth Tones</h3>
+            <p>Neutral</p>
           </div>
         </div>
 
         <div class="gallery-item" data-title="Glitter Fade" data-category="Trendy">
           <img
-            src="https://images.unsplash.com/photo-1604654894611-6973b376cbde?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Glitter Fade">
+            src="assets/img/image04.jpg"
+            alt="Hands and feet with matching bright blue nail polish">
           <div class="gallery-overlay">
-            <h3>Glitter Fade</h3>
-            <p>Trendy</p>
+            <h3>Bold Harmony</h3>
+            <p>Vibrant</p>
           </div>
         </div>
 
         <div class="gallery-item" data-title="Minimalist Lines" data-category="Abstract">
           <img
-            src="https://images.unsplash.com/photo-1659990668491-9bcdc5b06338?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Minimalist Lines">
+            src="assets/img/image05.jpg"
+            alt="Clear base nails with bold black French tips in a sleek, contemporary style">
           <div class="gallery-overlay">
-            <h3>Minimalist Lines</h3>
-            <p>Abstract</p>
+            <h3>French Bold</h3>
+            <p>Minimal</p>
           </div>
         </div>
 
         <div class="gallery-item" data-title="Jewel Tones" data-category="Glamour">
           <img
-            src="https://images.unsplash.com/photo-1727468939344-44929b044076?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            alt="Jewel Tones">
+            src="assets/img/image06.jpg"
+            alt="Nails painted in soft gradients of purple tones, accented by natural green leaves for a botanical touch">
           <div class="gallery-overlay">
-            <h3>Jewel Tones</h3>
-            <p>Glamour</p>
+            <h3>Purple Blend</h3>
+            <p>Floral</p>
+          </div>
+        </div>
+      </div>
+              <div class="gallery-item" data-title="Glitter Fade" data-category="Trendy">
+          <img
+            src="assets/img/image07.jpg"
+            alt="Nails painted in a soft pink shade, accented with a bright pink polish bottle and surrounded by red floral elements">
+          <div class="gallery-overlay">
+            <h3>Pink Bloom</h3>
+            <p>Glossy</p>
+          </div>
+        </div>
+
+        <div class="gallery-item" data-title="Minimalist Lines" data-category="Abstract">
+          <img
+            src="assets/img/image08.jpg"
+            alt="Nails featuring dark red polish alongside soft pink bases with diagonal red tips and silver glitter accents">
+          <div class="gallery-overlay">
+            <h3>Crimson Edge</h3>
+            <p>Dual</p>
+          </div>
+        </div>
+
+        <div class="gallery-item" data-title="Jewel Tones" data-category="Glamour">
+          <img
+            src="assets/img/image09.jpg"
+            alt="Nails painted in pale pink with a glossy finish, featuring subtle glitter accents near the tips">
+          <div class="gallery-overlay">
+            <h3>Pink Sparkle</h3>
+            <p>Glossy</p>
           </div>
         </div>
       </div>
