--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 
       <div class="footer-bottom">
         <p class="copyright">© <span id="currentYear"></span> Lina's Touch. All rights reserved. | Proudly designed By
-          <a href="https://curvea.co.uk" target="_blank"><strong>Curvea LTD</strong></a>
+          <a href="https://curveadesign.com" target="_blank"><strong>Curvea Design</strong></a>
         </p>
         <div class="footer-legal">
           <a href="privacy.html">Privacy Policy</a>
