--- a/index.html
+++ b/index.html
@@ -223,16 +223,16 @@
             <p class="address-label">Address:</p>
             <address>
               <p class="address">Antelias-Bikfaya Highway</p>
-              <p class="address">Elissar, center xyz, Rawad Haddad Salon</p>
+              <p class="address">Elissar, near Blom Bank, Rawad Haddad Salon</p>
             </address>
             <div class="separator"></div>
 
             <p class="hours-label">Opening Hours:</p>
             <div class="hours-grid">
               <span>Tuesday - Friday</span>
-              <span>9:00 AM - 6:00 PM</span>
+              <span>10:00 AM - 7:00 PM</span>
               <span>Saturday</span>
-              <span>9:00 AM - 5:00 PM</span>
+              <span>10:00 AM - 5:00 PM</span>
             </div>
           </div>
 
