Service Page Redesign

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lina's Touch - Premium Nail Salon</title>
   <meta name="description" content="Experience luxury nail treatments in a serene environment at Lina's Touch.">
-  <meta name="author" content="Curvea LTD">
-  <meta name="keywords" content="nail salon, manicure, pedicure, beauty spa, Lina's Touch, luxury nails">
+  <meta name="author" content="Curvea Design">
+  <meta name="keywords" content="Lina's touch, nail salon, manicure, pedicure, gel nails, acrylic nails, nail art, nail extensions, French manicure, spa pedicure, cuticle care, nail repair, polish change, beauty spa, luxury nails, elegant nails, pampering, self-care, beauty lounge, premium beauty, upscale treatments, relaxation, indulgence, flawless finish, glow-up, rejuvenation, OPI, Essie, CND Shellac, paraffin treatment, long-lasting polish, cruelty-free products, organic spa, nail shaping, glossy finish, matte nails, nail trends, clean beauty, waxing, facial, brow shaping, lash lift, skincare, threading, body scrub, makeup touch-ups, makeup, Lebanese beauty, Beirut glam, personalized service, client-first experience, beauty experts, trusted professionals, hair salon, haircare, haircut, hairstyling, blow dry, keratin treatment, balayage, hair color, highlights, hair gloss, hair repair, split ends, hair mask, scalp treatment, frizz control, root touch-up, hair shine, healthy hair, hair hydration, smoothing treatment, deep conditioning, shine boost, heat protection, professional styling,
+waxing, hair removal, body waxing, facial waxing, eyebrow shaping, upper lip waxing, bikini waxing, Brazilian wax, underarm waxing, full leg wax, arms wax, gentle wax, sugaring, threading, smooth skin, skin exfoliation, long-lasting smoothness, soft finish, irritation-free, sensitive skin care, post-wax care">
   <meta name="robots" content="index, follow">
 
   <meta property="og:title" content="Lina's Touch - Premium Nail Salon">
@@ -37,7 +38,7 @@
   <header id="header" class="header">
     <div class="container">
       <div class="navbar">
-        <a href="index.html" class="logo">Lina's<span>Touch</span></a>
+        <a href="/" class="logo">Lina's<span>Touch</span></a>
         <nav class="desktop-nav">
           <ul>
             <li><a href="/" class="nav-link">Home</a></li>
@@ -47,7 +48,7 @@
             <li><a href="#gallery" class="nav-link">Gallery</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
           </ul>
-          <button class="btn book-btn">Book Now</button>
+          <a class="btn book-btn" href="https://wa.me/+96171363003">Book Now</a>
         </nav>
         <button class="mobile-menu-btn" aria-label="Menu" aria-expanded="false">
           <i class="fas fa-bars"></i> <!-- hamburger icon -->
@@ -62,7 +63,6 @@
           <li><a href="#studio" class="nav-link">Studio</a></li>
           <li><a href="#gallery" class="nav-link">Gallery</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
-          <!-- <li><button class="btn book-btn-mobile">Book Now</button></li> -->
         </ul>
       </div>
     </div>
@@ -75,7 +75,7 @@
         <h1 class="animate-fade-in">Lina’s Touch</h1>
         <p class="animate-fade-in">More than nails—it’s a touch of passion, perfected for over 25 years.</p>
         <div class="hero-buttons animate-scale-in">
-          <button class="btn primary-btn">Book via WhatsApp</button>
+          <a class="btn primary-btn" href="https://wa.me//+96171363003">Book via WhatsApp</a>
           <a href="services.html" class="btn outline-btn">View Services</a>
         </div>
       </div>
@@ -151,7 +151,7 @@
           <h3>Signature Manicure</h3>
           <p>Our classic manicure includes nail shaping, cuticle care, gentle exfoliation, hydrating massage, and
             perfect polish application.</p>
-          <button class="btn book-service-btn">Book Now</button>
+          <a class="btn book-service-btn" href="https://wa.me/+96171363003">Book Now</a>
         </div>
 
         <div class="service-card">
@@ -163,7 +163,7 @@
           <h3>Gel Extension</h3>
           <p>Extend the length of your natural nails with our durable gel extensions, customized to your preferred shape
             and design.</p>
-          <button class="btn book-service-btn">Book Now</button>
+          <a class="btn book-service-btn" href="https://wa.me/+96171363003">Book Now</a>
         </div>
 
         <div class="service-card">
@@ -175,7 +175,7 @@
           <h3>Luxury Pedicure</h3>
           <p>Indulge in our premium pedicure featuring aromatic soak, extensive exfoliation, callus treatment, mask,
             extended massage, and polish.</p>
-          <button class="btn book-service-btn">Book Now</button>
+          <a class="btn book-service-btn" href="https://wa.me/+96171363003">Book Now</a>
         </div>
 
       </div>
@@ -528,17 +528,11 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-about">
-          <h3>Lina's<span>Touch</span></h3>
+          <h3 >Lina's<span>Touch</span></h3>
           <p>Dedicated to delivering excellence, we craft premium experiences with expertise and care.</p>
           <div class="social-links">
-            <a href="https://facebook.com/page" class="social-link">
-              <i class="fa-brands fa-facebook"></i>
-            </a>
             <a href="https://instagram.com/page" class="social-link">
               <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a href="https://tiktok.com/@page" class="social-link">
-              <i class="fa-brands fa-tiktok"></i>
             </a>
             <a href="https://wa.me/96171363003" class="social-link">
               <i class="fa-brands fa-whatsapp"></i>
@@ -560,12 +554,12 @@
         <div class="footer-links">
           <h4>Services</h4>
           <ul>
-            <li><a href="#">Manicure</a></li>
-            <li><a href="#">Pedicure</a></li>
-            <li><a href="#">Nail Extensions</a></li>
-            <li><a href="#">Nail Art</a></li>
-            <li><a href="#">Bridal Packages</a></li>
-            <li><a href="#">Gift Cards</a></li>
+               <li><a href="services.html">Manicure</a></li>
+            <li><a href="services.html">Pedicure</a></li>
+            <li><a href="services.html">Nail Extensions</a></li>
+            <li><a href="services.html">Nail Art</a></li>
+            <li><a href="#" class="disabled-anchor">Bridal Packages</a></li>
+            <li><a href="#" class="disabled-anchor">Gift Cards</a></li>
           </ul>
         </div>
 
