--- a/index.html
+++ b/index.html
@@ -7,31 +7,94 @@
   <title>Lina's Touch - Premium Nail Salon</title>
   <meta name="description" content="Experience luxury nail treatments in a serene environment at Lina's Touch.">
   <meta name="author" content="Curvea Design">
-  <meta name="keywords" content="Lina's touch, nail salon, manicure, pedicure, gel nails, acrylic nails, nail art, nail extensions, French manicure, spa pedicure, cuticle care, nail repair, polish change, beauty spa, luxury nails, elegant nails, pampering, self-care, beauty lounge, premium beauty, upscale treatments, relaxation, indulgence, flawless finish, glow-up, rejuvenation, OPI, Essie, CND Shellac, paraffin treatment, long-lasting polish, cruelty-free products, organic spa, nail shaping, glossy finish, matte nails, nail trends, clean beauty, waxing, facial, brow shaping, lash lift, skincare, threading, body scrub, makeup touch-ups, makeup, Lebanese beauty, Beirut glam, personalized service, client-first experience, beauty experts, trusted professionals, hair salon, haircare, haircut, hairstyling, blow dry, keratin treatment, balayage, hair color, highlights, hair gloss, hair repair, split ends, hair mask, scalp treatment, frizz control, root touch-up, hair shine, healthy hair, hair hydration, smoothing treatment, deep conditioning, shine boost, heat protection, professional styling,
-waxing, hair removal, body waxing, facial waxing, eyebrow shaping, upper lip waxing, bikini waxing, Brazilian wax, underarm waxing, full leg wax, arms wax, gentle wax, sugaring, threading, smooth skin, skin exfoliation, long-lasting smoothness, soft finish, irritation-free, sensitive skin care, post-wax care">
   <meta name="robots" content="index, follow">
+  
+  <!-- Keywords (Optional for minor search engines) -->
+  <meta name="keywords" content="Lina's touch, nail salon, manicure, pedicure, gel nails, acrylic nails, nail art, nail extensions, French manicure, spa pedicure, cuticle care, nail repair, polish change, beauty spa, luxury nails, elegant nails, pampering, self-care, beauty lounge, premium beauty, upscale treatments, relaxation, indulgence, flawless finish, glow-up, rejuvenation, OPI, Essie, CND Shellac, paraffin treatment, long-lasting polish, cruelty-free products, organic spa, nail shaping, glossy finish, matte nails, nail trends, clean beauty, waxing, facial, brow shaping, lash lift, skincare, threading, body scrub, makeup touch-ups, makeup, Lebanese beauty, Beirut glam, personalized service, client-first experience, beauty experts, trusted professionals, hair salon, haircare, haircut, hairstyling, blow dry, keratin treatment, balayage, hair color, highlights, hair gloss, hair repair, split ends, hair mask, scalp treatment, frizz control, root touch-up, hair shine, healthy hair, hair hydration, smoothing treatment, deep conditioning, shine boost, heat protection, professional styling, waxing, hair removal, body waxing, facial waxing, eyebrow shaping, upper lip waxing, bikini waxing, Brazilian wax, underarm waxing, full leg wax, arms wax, gentle wax, sugaring, threading, smooth skin, skin exfoliation, long-lasting smoothness, soft finish, irritation-free, sensitive skin care, post-wax care">
 
+  <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Lina's Touch - Premium Nail Salon">
   <meta property="og:description" content="Experience luxury nail treatments in a serene environment at Lina's Touch.">
-  <meta property="og:image" content="https://website.com/assets/img/hero.jpg">
-  <meta property="og:url" content="https://website.com">
+  <meta property="og:image" content="https://linastouch.com/assets/img/linas-touch.png">
+  <meta property="og:url" content="https://linastouch.com">
   <meta property="og:type" content="website">
 
+  <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Lina's Touch - Premium Nail Salon">
   <meta name="twitter:description" content="Experience luxury nail treatments in a serene environment at Lina's Touch.">
-  <meta name="twitter:image" content="https://website.com/assets/img/hero.jpg">
+  <meta name="twitter:image" content="https://linastouch.com/assets/img/linas-touch.png">
 
+  <!-- Theme Color -->
   <meta name="theme-color" content="#7E69AB">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+  <!-- Favicons (basic placeholders) -->
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"> -->
+
+  <!-- Preconnect for Performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 
   <!-- Google Fonts -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@300;400;500;600&display=swap"></noscript>
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-  <!-- CSS -->
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="styles/main.css">
+
+  <!-- Local Business Schema JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BeautySalon",
+    "name": "Lina's Touch",
+    "image": "https://linastouch.com/assets/img/linas-touch.png",
+    "@id": "https://linastouch.com",
+    "url": "https://linastouch.com",
+    "telephone": "+96171363003",
+    "priceRange": "$",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Antelias-Bikfaya Highway, Elissar, near Blom Bank, Rawad Haddad Salon",
+      "addressLocality": "Elissar",
+      "addressRegion": "Mount Lebanon Governorate",
+      "postalCode": "N/A",
+      "addressCountry": "LB"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": 33.9255859,
+      "longitude": 35.6359933
+    },
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "10:00",
+        "closes": "19:00"
+      },
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Saturday",
+        "opens": "10:00",
+        "closes": "17:00"
+      }
+    ],
+    "sameAs": [
+      "https://www.instagram.com/linastouch_lb"
+    ]
+  }
+  </script>
 </head>
 
 <body>
@@ -237,11 +300,7 @@ waxing, hair removal, body waxing, facial waxing, eyebrow shaping, upper lip wax
           </div>
 
           <div class="map">
-            <iframe src="https://www.google.com/maps?q=33.9255859,35.6359933&hl=en&z=16&output=embed" width="100%"
-              height="400" style="border:0;" allowfullscreen="" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3310.6064845496207!2d35.6359877!3d33.9255262!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151f3f876280b8b7%3A0x8a61feecc1431e9d!2sLina&#39;s%20Touch!5e0!3m2!1sen!2slb!4v1754490775698!5m2!1sen!2slb" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
 
@@ -531,12 +590,16 @@ waxing, hair removal, body waxing, facial waxing, eyebrow shaping, upper lip wax
           <h3 >Lina's<span>Touch</span></h3>
           <p>Dedicated to delivering excellence, we craft premium experiences with expertise and care.</p>
           <div class="social-links">
-            <a href="https://instagram.com/page" class="social-link">
+            <a href="https://instagram.com/linastouch_lb" target="_blank" rel="noopener noreferrer" class="social-link">
               <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://wa.me/96171363003" class="social-link">
+            <a href="https://wa.me/96171363003" target="_blank" rel="noopener noreferrer" class="social-link">
               <i class="fa-brands fa-whatsapp"></i>
             </a>
+            <a href="https://share.google/wbnZwsCmyOdUXwrXF" target="_blank" rel="noopener noreferrer" class="social-link" title="Google Business">
+              <i class="fa-brands fa-google"></i>
+            </a>
+
           </div>
         </div>
 
